--- a/02-eleventy-site/src/_includes/default.liquid
+++ b/02-eleventy-site/src/_includes/default.liquid
@@ -12,6 +12,7 @@
       <nav>
         <a href="/" {% if page.url == "/" %}class="active"{% endif %}>Home</a>
         <a href="/about/" {% if page.url == "/about/" %}class="active"{% endif %}>About</a>
+        <a href="/contact/" {% if page.url == "/contact/" %}class="active"{% endif %}>Contact</a>
       </nav>
     </header>
 
