feat: convert to 11ty

--- a/01-really-static/css/main.css
+++ b/01-really-static/css/main.css
@@ -10,7 +10,7 @@ body {
 }
 
 header {
-  background: navy;
+  background: darkslategray;
   font-size: 1.25rem;
   padding: 0.5rem 5vw;
   text-align: center;
