--- a/02-eleventy-site/src/_includes/default.liquid
+++ b/02-eleventy-site/src/_includes/default.liquid
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Really Static · Jamstack Fast Track</title>
-    <link rel="stylesheet" href="css/main.css" />
+    <title>{{ title }} · Jamstack Fast Track</title>
+    <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
     <header>
-      <a href="index.html">Jamstack Fast Track</a>
+      <a href="/">Jamstack Fast Track</a>
       <nav>
-        <a href="index.html" class="active">Home</a>
-        <a href="about.html">About</a>
+        <a href="/" {% if page.url == "/" %}class="active"{% endif %}>Home</a>
+        <a href="/about/" {% if page.url == "/about/" %}class="active"{% endif %}>About</a>
       </nav>
     </header>
 
