--- a/02-eleventy-site/src/_includes/default.liquid
+++ b/02-eleventy-site/src/_includes/default.liquid
@@ -20,6 +20,9 @@
       {{ content }}
 
       <div class="comments">
+        <h2>Comments</h2>
+        <ul class="comment-list"></ul>
+
         <h3>Add a Comment</h3>
         <form action="/.netlify/functions/add-comment" method="POST">
           <label for="githubUsername">GitHub Username</label>
@@ -38,5 +41,44 @@
     <footer>
       <p>Built by <a href="#yourlinkhere">Your Name Here</a></p>
     </footer>
+
+    <template id="comment">
+      <li>
+        <p class="comment-text"></p>
+        <p class="comment-author"></p>
+      </li>
+    </template>
+
+    <script>
+      async function displayComments() {
+        if (!'content' in document.createElement('template')) {
+          console.error('You browser does not support the template element.')
+        }
+
+        const commentContainer = document.querySelector('.comment-list');
+        const commentTemplate = document.querySelector('#comment');
+
+        const response = await fetch('/.netlify/functions/load-comments', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+          },
+          body: JSON.stringify({ page: '{{ page.url }}' })
+        })
+          .then(res => res.json())
+          .catch(err => console.error(err));
+        
+        response.commentsByPage.data.forEach(({ githubUsername, comment }) => {
+          const container = commentTemplate.content.cloneNode(true);
+
+          container.querySelector('.comment-text').innerText = comment;
+          container.querySelector('.comment-author').innerText = `Posted by @${githubUsername}`;
+
+          commentContainer.appendChild(container);
+        })
+      }
+
+      displayComments()
+    </script>
   </body>
 </html>
